<resources>
    <string name="app_name">AcademicPlanner</string>
    <string name="app_title">Academic Planner</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="registration_prompt">Don\'t have an account yet?</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="academic_calender_text">Academic Calendar</string>
    <string name="grade_calculator_text">Grade Calculator</string>
    <string name="email_tutor_text">Email Tutor</string>
    <string name="deadline_summary_text">Deadline Summary</string>
    <string name="subject_text">Subject</string>
    <string name="message_text">Message</string>
    <string name="send_email">Send Email</string>
    <string name="deadline_text">Deadline</string>
    <string name="deadline_not_set_text">Deadline Not Set</string>
    <string name="upsert_date_text">Upsert Date</string>

    <string name="unit_code_hint">Unit Code</string>
    <string name="unit_code_helper">The unit code for the score </string>

    <string name="assignment_mark_hint">Assignment</string>
    <string name="assignment_mark_helper">What you scored in your assignment (out of 30)</string>

    <string name="cat_mark_hint">CAT</string>
    <string name="cat_mark_helper">What you scored in your CAT (out of 30)</string>

    <string name="exam_mark_hint">Exam</string>
    <string name="exam_mark_helper">What you scored in your exam (out of 100)</string>

    <string name="save_score_text">Save Score</string>
    <string name="add_unit_text">Add Unit</string>
</resources>