<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context=".ui.fragments.DeadlineSummaryFragment">


    <LinearLayout
        android:id="@+id/view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline_not_set_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

        <Button
            android:id="@+id/view_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_inset"
            android:text="@string/upsert_date_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/deadline_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/deadline_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_inset"
            android:text="@string/upsert_date_text" />

    </LinearLayout>

</FrameLayout>